--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,12 @@
   text-align: center;
 }
  */
+
+ input[type="text"] {
+    padding: 6px 20px;
+    margin: 0px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+ }
